--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.6.8",
-    "nodemon": "^1.19.1"
+    "mongoose": "^5.6.9",
+    "mysql2": "^1.6.5",
+    "nodemon": "^1.19.1",
+    "pg": "^7.12.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.13.1"
   }
 }
